<resources>
    <string name="app_name">Коммунальные платежи</string>
    <string name="settings">Настройки</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_taruf_value">Значение тарифов</string>
    <string name="open_taruf">Тарифи</string>
    <string name="іnstruction">Инструкции</string>
    <string name="exit">Выход</string>
    <string name="previos">Предыдущие</string>
    <string name="actual">Текущие</string>
    <string name="action">Расчёт</string>
    <string name="btnAction">Запись</string>
    <string name="action_taruf_value">ua.android.d2.komunalka.taruf_value</string>
    <string name="action_taruf">ua.android.d2.komunalka.taruf</string>
    <string name="title_activity_bd">Тариф</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_work_bd">Заполнения</string>
    <string name="instruction">Инструкции</string>
    <string name="title_activity_instruction">Инструкция</string>

    <string-array name="groupe_elements">
        <item>Поля</item>
        <item>Кнопки</item>
        <item>Меню</item>
    </string-array>

    <string-array name="field">
        <item>Предыдущие - заполнить предварительным показаниям счетчика.</item>
        <item>Текущие - заполнить актуальными показателями счетчика.</item>
        <item>Диапазон:
 \nесли в диапазоне одно значение, то оно должно равняться 0; \nесли в диапазоне несколько значений (2 и более), то первый диапазон начинается с 0,
 а второй из числа которое явно больше предыдущего значения (например 100 тогда значения будут считаться в промежутке
 от 0 до 100 и от 101 и до максимума или до следующего диапазона).</item>
        <item>Значение - задается в целых, если в тарифе стоит 25.8 коп. то нужно указать 0.258 или  147.2 коп, то 1.472.</item>
        <item>Название тарифа - дайте имя новому тарифу и заполните его значение.</item>
    </string-array>
    <string-array name="buttons">
        <item>Расчёт - выводит результат расчёта.</item>
        <item>Очистить - очищает поля ввода и вывода.</item>
        <item>Добавить - добавление новых тарифов или значения тарифов.</item>
        <item>Изменить - изменение информации (для начала нужно выделить поле для изменения, а после нажать на кноку).</item>
        <item>Удалить - удаления записи (для начала нужно выделить поле для удаления, а после нажать на кноку).</item>
        <item>Запись - провести операцию записи и изменения данных. </item>
    </string-array>

    <string-array name="menu">
        <item>Тарифи - просмотр тарифов, возможно также добавление, изменение или удаление.</item>
        <item>Значение тарифов - просмотр значений тарифов. Каждая запись содержит:
\nid - идентификатор записи;
\nid_tariffs - идентификатор тарифа;
\ndiapazon - начало диапазона (если одна запись тогда она должна равна 0); \nvalue - стоймость единици измерения.
Возможно также добавление, изменение или удаление.</item>
        <item>Инструкции - имеет информацию о возможностях програми, инструкции пользвания програмой.</item>
        <item>Выход - выход из приложения.</item>
    </string-array>
</resources>
